# CappyFM

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  run  run.cmd
config/: cappyfm.toml  lavalink.application.yml
crates/cappy-bot/: Cargo.toml
crates/cappy-bot/src/: main.rs  playback.rs  radio.rs  spotify.rs
crates/cappy-core/: Cargo.toml
crates/cappy-core/src/: command.rs  lib.rs  resolver.rs  settings.rs
crates/cappy-dj/: Cargo.toml
crates/cappy-dj/src/: lib.rs
migrations/: 20260711000000_bootstrap.sql  20260711010000_tracks_and_sources.sql  20260711020000_radio.sql
