[workspace]
members = ["crates/cappy-core", "crates/cappy-dj", "crates/cappy-bot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
config = { version = "0.15", default-features = false, features = ["toml"] }
dotenvy = "0.15"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
serenity = { version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend", "voice"] }
songbird = { version = "0.5", default-features = false, features = ["gateway", "serenity", "native"] }
lavalink-rs = { version = "0.15", default-features = false, features = ["macros", "serenity", "songbird", "tungstenite-rustls-webpki-roots"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
strsim = "0.11"
thiserror = "2.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9"

[profile.release]
lto = "thin"
strip = true
