[package]
name = "cappy-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
cappy-core = { path = "../cappy-core" }
cappy-dj = { path = "../cappy-dj" }
dotenvy.workspace = true
serenity.workspace = true
serde_json.workspace = true
songbird.workspace = true
lavalink-rs.workspace = true
reqwest.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
